--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -2,22 +2,52 @@
 
 nav#menu {
 	Display: block;
+	position: absolute;
 }
 
-nav#menu ul#1{
+nav#menu ul {
 	list-style: none;
-	position: Absolute;
-	}
+	background-color: black;
+	padding: 0px;
+	margin: 0px;
+}
 
-nav#menu ul{
-	list-style: none;
-	position: Absolute;
-	top: -20px;
-	Left: 950px;}
-
-nav#menu li {
+li {
 	display: inline-block;
-	background-color: #dddddd;
-	padding: 10px;
-	margin: 2px;
-	transition: background-color 1s;
+	color: #ffffff;
+	font-family: sans-serif;
+	font-size: 13pt;
+	padding: 20px;
+	margin: 10px;}
+
+/* estilo do botão getstarted */
+
+h1#botao {
+	display: block;
+	position: absolute;
+	width: 300px;
+	height: 100px;
+	top: 50%;
+	left: 50%;
+	margin-top: -50px;
+	margin-left: -50px;
+	background-color: chartreuse;
+	color: #000000;
+}
+
+img#fundo {
+	width: 100%;
+	height: 100;
+}
+
+body{
+	background: #000000;
+}
+
+h1 {
+	color: #ffffff
+}
+
+h2 {
+	color: #ffffff
+}
