--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -2,15 +2,13 @@
 
 nav#menu {
 	Display: block;
-	position: absolute;
-}
+	position: absolute;}
 
 nav#menu ul {
 	list-style: none;
 	background-color: black;
 	padding: 0px;
-	margin: 0px;
-}
+	margin: 0px;}
 
 li {
 	display: inline-block;
@@ -32,26 +30,26 @@ h1#botao {
 	margin-top: -50px;
 	margin-left: -50px;
 	background-color: chartreuse;
-	color: #000000;
-}
+	color: #000000;}
 
 img#fundo {
 	width: 100%;
-	height: 100;
-}
+	height: 100;}
 
 body{
-	background: #000000;
-}
+	background: #000000;}
 
 h1#flutuante  {
 	color: #ffffff;
 	position: relative;
 	font-size: 50pt;
 	top: 50px;
-	left: 50px;
-}
+	left: 50px;}
 
 h2 {
-	color: #ffffff
-}
+	color: #ffffff}
+
+/* tirando sublinhado do link do menu*/	
+a  {
+	text-decoration: none;
+	color: #ffffff;}
