--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -53,3 +53,14 @@ h2 {
 a  {
 	text-decoration: none;
 	color: #ffffff;}
+
+a#preview {
+	text-decoration: none;
+	color: #008080;
+}
+
+/* corpo do site */
+
+div#corpo {
+	background-color: black;
+}
