--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,66 +1,8 @@
 @chaset: "UTF-8"
-
-nav#menu {
-	Display: block;
-	position: absolute;}
-
-nav#menu ul {
-	list-style: none;
-	background-color: black;
-	padding: 0px;
-	margin: 0px;}
-
-li {
-	display: inline-block;
-	color: #ffffff;
-	font-family: sans-serif;
-	font-size: 13pt;
-	padding: 20px;
-	margin: 10px;}
-
-/* estilo do botão getstarted */
-
-h1#botao {
-	display: block;
-	position: absolute;
-	width: 300px;
-	height: 100px;
-	top: 50%;
-	left: 50%;
-	margin-top: -50px;
-	margin-left: -50px;
-	background-color: chartreuse;
-	color: #000000;}
-
-img#fundo {
-	width: 100%;
-	height: 100;}
+<style>
 
 body{
-	background: #000000;}
-
-h1#flutuante  {
-	color: #ffffff;
-	position: relative;
-	font-size: 50pt;
-	top: 50px;
-	left: 50px;}
-
-h2 {
-	color: #ffffff}
-
-/* tirando sublinhado do link do menu*/	
-a  {
-	text-decoration: none;
-	color: #ffffff;}
-
-a#preview {
-	text-decoration: none;
-	color: #008080;
+	background-color: #000000;
 }
 
-/* background */
-
-body {
-	background-image: url('_imagens/fundo-montanha.jpg');
-}
+</style>
